# scikit-build_boost-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
cmake/: FindGMP.cmake  FindMPC.cmake  exampleConfig.cmake.in
core/: CMakeLists.txt
core/include/example/: core.hpp  executable.hpp
core/src/: core.cpp  executable.cpp
core/test/: test_core.cpp
python_bindings/: CMakeLists.txt
python_bindings/include/: example_pycpp.hpp
python_bindings/src/: example_pycpp.cpp
python_wrapper/: CMakeLists.txt  README.md  pyproject.toml
python_wrapper/example/: __init__.py
